[gd_scene load_steps=13 format=3 uid="uid://j5ampglym1at"]

[ext_resource type="Script" path="res://goal/player_goal.gd" id="1_pwn1o"]
[ext_resource type="Texture2D" uid="uid://dmmadcrn8ay1x" path="res://assets/textures/circle-filled.png" id="2_ek0ph"]
[ext_resource type="AudioStream" uid="uid://ds8emyev6w6pm" path="res://assets/sounds/explod.wav" id="3_kyjss"]
[ext_resource type="AudioStream" uid="uid://bigqmw32qq7sh" path="res://assets/sounds/2up.wav" id="4_yyl1y"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2tyrj"]
rough = true
bounce = 0.75

[sub_resource type="CircleShape2D" id="CircleShape2D_hq080"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oekn7"]
radius = 24.0

[sub_resource type="Curve" id="Curve_mou8y"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.106667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_pvwyv"]
curve = SubResource("Curve_mou8y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d03xg"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 150.0
gravity = Vector3(0, 0, 0)
damping_min = 50.0
damping_max = 150.0
scale_min = 0.05
scale_max = 0.25
scale_curve = SubResource("CurveTexture_pvwyv")
color = Color(0, 1, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qwa8d"]
random_pitch = 1.5
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("3_kyjss")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dobcb"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("4_yyl1y")
stream_0/weight = 1.0

[node name="PlayerGoal" type="RigidBody2D" node_paths=PackedStringArray("stun_timer", "shape", "collect_particles", "explod_sound", "yipee_sound")]
collision_layer = 16
physics_material_override = SubResource("PhysicsMaterial_2tyrj")
gravity_scale = 0.0
constant_torque = -100.0
script = ExtResource("1_pwn1o")
stun_timer = NodePath("StunTimer")
shape = NodePath("Shape")
collect_particles = NodePath("CollectParticles")
explod_sound = NodePath("Explod")
yipee_sound = NodePath("Yipee")

[node name="Shape" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-14, -8, -8, -14, 0, -16, 8, -14, 14, -8, 16, 0, 14, 8, 8, 14, 0, 16, -8, 14, -14, 8, -16, 0)

[node name="Fill" type="Polygon2D" parent="Shape"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-12, -6, -6, -12, 0, -14, 6, -12, 12, -6, 14, 0, 12, 6, 6, 12, 0, 14, -6, 12, -12, 6, -14, 0)

[node name="Dasher" type="Polygon2D" parent="Shape"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(8, -14, 1, -1, 12, -12, 14, -8, 3, -1, 16, -2, 16, 4, 3, 1, 14, 8, 12, 12, 1, 1, 8, 14, 4, 16, 0, 2, -4, 16, -8, 14, -1, 1, -12, 12, -14, 8, -3, 1, -16, 3, -16, -3, -3, -1, -14, -8, -12, -12, -1, -1, -8, -14, -4, -16, 0, -2, 4, -16)

[node name="Polygon2D" type="Polygon2D" parent="Shape"]
polygon = PackedVector2Array(0, -2, 2, 0, 0, 2, -2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_hq080")

[node name="MoveTimer" type="Timer" parent="."]

[node name="PlayerZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerZone"]
visible = false
shape = SubResource("CircleShape2D_oekn7")

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollectParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_d03xg")
texture = ExtResource("2_ek0ph")
lifetime = 2.0
one_shot = true
explosiveness = 1.0

[node name="Explod" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_qwa8d")
volume_db = -10.0
bus = &"sfx"

[node name="Yipee" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_dobcb")
volume_db = 10.0
pitch_scale = 0.75
bus = &"sfx"

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="body_entered" from="PlayerZone" to="." method="_on_player_zone_body_entered"]
